--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "url": "https://github.com/gdomaradzki/focus-gestor-orcamentos/issues"
   },
   "homepage": "https://github.com/gdomaradzki/focus-gestor-orcamentos#readme",
+  "dependencies": {
+    "jquery": "2.2.1"
+  },
   "devDependencies": {
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
@@ -24,11 +27,11 @@
     "css-loader": "^0.27.3",
     "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.28.0",
+    "inline-manifest-webpack-plugin": "^3.0.1",
     "node-sass": "^4.5.1",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.16.0",
     "webpack": "^2.3.2",
     "webpack-dev-server": "^2.4.2"
-  },
-  "dependencies": {}
+  }
 }
