--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "materialize-css": "^0.98.1",
+    "axios": "^0.15.3",
+    "express": "^4.15.2",
     "jquery": "2.1.1",
     "vue": "^2.2.2",
     "vue-router": "^2.2.0"
@@ -33,6 +35,7 @@
     "chromedriver": "^2.27.2",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
+    "cors": "^2.8.3",
     "cross-env": "^3.1.4",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.26.1",
@@ -62,6 +65,7 @@
     "karma-webpack": "^2.0.2",
     "lolex": "^1.5.2",
     "mocha": "^3.2.0",
+    "mongoose": "^4.9.2",
     "nightwatch": "^0.9.12",
     "node-sass": "^4.5.2",
     "opn": "^4.0.2",
