--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
   "homepage": "https://github.com/gdomaradzki/focus-gestor-orcamentos#readme",
   "_moduleAliases": {
     "@root": ".",
+    "@BudgetManager": "./services/BudgetManagerAPI/",
+    "@BudgetManagerModels": "./services/BudgetManagerAPI/app/models",
     "@BudgetManagerAPI": "./services/BudgetManagerAPI/config/app.js",
     "@config": "./services/BudgetManagerAPI/config/index.js"
   },
