--- a/application/package.json
+++ b/application/package.json
@@ -15,9 +15,9 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
-    "materialize-css": "^0.100.2",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuetify": "^0.16.7"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
