--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
     "mongoose": "^4.12.2",
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
-    "passport-jwt": "^3.0.0",
-    "vue-cookie": "^1.1.4"
+    "passport-jwt": "^3.0.0"
   }
 }
